--- a/style.css
+++ b/style.css
@@ -4,13 +4,108 @@
     box-sizing: border-box;
 }
 
+:root{
+    --primary-color: #8a7d74;
+    --secondary-color: #a0958d;
+}
+
 body{
+    background-color: var(--primary-color);
     font-family: 'Lato', sans-serif;
     margin: 0;
+}
+
+header{
+    padding: 1rem;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: flex-end;
+    background-color: var(--secondary-color);
+}
+
+.search{
+    background-color: transparent;
+    border: 1px solid var(--primary-color);
+    padding: 0.5rem 1rem;
+    border-radius: 50px;
+    font-size: 1rem;
+    color: #fff;
+    font-family: inherit;
+}
+
+.search:focus{
+    outline: 0;
+    background-color: var(--primary-color);
+}
+
+.search::placeholder{
+    color: #d8d3d0;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    min-height: 100vh;
+}
+
+.movie{
+    width: 300px;
+    margin: 1rem;
+    border-radius: 3px;
+    border: 1px  solid #756a63;
+    background-color: var(--secondary-color);
+    position: relative;
     overflow: hidden;
+}
+
+.movie img{
+    width: 100%;
+    border-radius: 3px;
+}
+
+.movie-info{
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
+}
+
+.movie-info h3{
+    margin-top: 0;
+}
+
+.movie-info span{
+    background-color: var(--primary-color);
+    padding: 0.75rem 0.5rem;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.movie-info span.green{
+    color: #c4d2b3;
+}
+
+.movie-info span.orange{
+    color: #EE9B01;
+}
+
+.movie-info span.red{
+    color: #BC0000;
+}
+
+.overview{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    padding: 1rem;
+    max-height: 100%;
+    transform: translateY(101%);
+    transition: transform 0.3s ease-in;
+}
+
+.movie:hover .overview{
+    transform: translateY(0);
 }
